[fix] fixed image stretching issue in search page

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -530,7 +530,8 @@ input[type=text].shortenURLField {
 }
 
 img.search-data {
-    min-height: 200px;
+    max-height: 100%;
+    width: 100%;
 }
 
 .slick-slide {
@@ -574,14 +575,23 @@ div.slick-slide.slick-active.thumbnailSpace {
 
 .thumbnail img {
     padding: 20px;
-    max-height: 200px;
+    height: 200px;
+    max-width: 240px;
 }
 
-.searchBox img {
+/*.searchBox img {
     padding-top: 20px;
     width: 180px;
     height: auto;
     max-height: 200px;
+}*/
+
+.searchImage {
+    padding-top: 20px;
+    width: 180px;
+    height: 200px;
+    display: inline-block;
+    line-height: 200px;
 }
 
 .canvasClass {
